--- a/src/regression.html
+++ b/src/regression.html
@@ -1,44 +1,23 @@
 <script type="text/x-red" data-template-name="regression">
     <div class="form-row">
-        <label for="node-input-appkey"><i class="fa fa-key"></i> Application Key</label>
-        <input type="text" id="node-input-appkey">
-    </div>
-    <div class="form-row">
-        <label for="node-input-cluster"><i class="fa fa-server"></i> Cluster</label>
-        <select type="text" id="node-input-cluster">
-            <option value="mt1">us-east-1 (US - default)</option>
-            <option value="eu">eu-west-1 (Europe)</option>
-            <option value="ap1">ap-southeast-1 (Singapore)</option>
-            <option value="ap2">ap-south-1 (Mumbai)</option>
-        </select>
-    </div>
-    <div class="form-row">
-        <label for="node-input-channel"><i class="fa fa-random"></i> Channel</label>
-        <input type="text" id="node-input-channel" placeholder="channel">
-    </div>
-    <div class="form-row">
-        <label for="node-input-event"><i class="fa fa-tasks"></i> Event</label>
-        <input type="text" id="node-input-event" placeholder="event">
-    </div>
-    <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
 </script>
 
 <script type="text/x-red" data-help-name="regression">
-
+    <p>Computes the least squares linear regression.</p>
+    <p>Takes a payload in the form of an array of tuples containing predictor values and observed responses.</p>
+    <p>The return payload is an object containing the slope <code>m</code> and intersection <code>b</code>.
+    <p>See <a href="https://simplestatistics.org/docs/#linearregression">https://simplestatistics.org/docs/#linearregression</a> for
+        more information.</p>
 </script>
 
 <script type="text/javascript">
     RED.nodes.registerType('regression', {
-        category: 'function',
+        category: 'analysis',
         color: "#D8BFD8",
         defaults: {
-            appkey: { value: "", required: true },
-            cluster: { value: "mt1" },
-            channel: { value: "" },
-            event: { value: "" },
             name: { value: "" }
         },
         inputs: 1,
